# cmake_tutorial

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  adder.cpp  build.sh  cmake_tutorial_Config.h.in  configure.sh  delete.sh  install.sh  main.cpp  run.sh  uninstall.sh
Adder/: CMakeLists.txt
